/*
 * $Id: ChangeLog,v 1.3221 2004/07/27 16:56:02 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-27 12:29 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * xdiff.txt
    * Updated to include: OVERRIDE CLASS, EXTEND CLASS, EXTENDABLE Native Types, NATIVE Types as OOP objects, BIT Operators

2004-07-27 19:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * include/inkey.ch
    + added K_SH_BS to simulate K_CTRL_SH_TAB in gtcrs
  * include/gtinfo.ch
  * source/rtl/gtwvt/gtwvt.c
    + added GTI_WINTITLE, GTI_ICONFILE, GTI_CODEPAGE to easy
      windows MULTI_GT

2004-07-27 15:15 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/hb-func.sh
  * xharbour/config/global.cf
    * added HB_DB_DRVEXT env var which may containt additional DB drivers

  * xharbour/include/dbinfo.ch
    + DBOI_SCOPEEVAL new DBOI method which allow evaluate C function
      against index keys
    + DBRMI_* constants for DBOI_SCOPEEVAL

  * xharbour/include/hbapirdd.h
    * formatting

  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    + DBOI_SCOPEEVAL implemented

  * xharbour/source/rdd/dbf1.c
    * do not resolve pending relations when it's not necessary

2004-07-27 11:53 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * doc/en/set.txt
    * Enhanced SET DBFLOCKSCHEME documentation

2004-07-27 03:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  *  contrib/libct/ascpos.c
    * cast

2004-07-26 23:30 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  + contrib/pdflib/pdf1.prg
  + contrib/pdflib/pdfhbdocs.prg
    ! minor fix
  * contrib/hbzlib/zipnew.c
    contrib/hbzlib/zip.c
    !added hb_unzipallfile() function to extract all files


2004-07-26 13:08 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * tests/extend.prg
    * small enhancement in sample
